# universidadviu

./: .gitignore  .gitmodules  README.md
01 - Primero/01GIIN - Estadistica/: clase3.R
01 - Primero/01GIIN - Estadistica/foro/: script.py
01 - Primero/05GIIN - Fundamentos de Programacion/uc1/: TP01-2C.circ  TP01-3B.circ
01 - Primero/05GIIN - Fundamentos de Programacion/uc2/: circuito.circ
01GIIN - Estadistica/: test.R  tp01.R
01GIIN - Estadistica/foro/: README.md  gasto_empresas.csv  gasto_publico.csv
01GIIN - Estadistica/uc1/: uc1.R
02 - Segundo/13GIIN - Teoria de Automatas y Lenguajes Formales/: pyproject.toml
02 - Segundo/13GIIN - Teoria de Automatas y Lenguajes Formales/03-11/: automata.py  automata1.txt
02 - Segundo/13GIIN - Teoria de Automatas y Lenguajes Formales/10-11/: ejercicios.py
02 - Segundo/13GIIN - Teoria de Automatas y Lenguajes Formales/UC1/: UC1_MIGUEL_GAGLIARDO.odt  afn-e.py  afn-e.txt  automata.md
02 - Segundo/13GIIN - Teoria de Automatas y Lenguajes Formales/UC2/: AFD.py  UC2_MIGUEL_GAGLIARDO.odt  afd1.txt  afd2.txt  where.txt
03 - Tercero/57GIIN - Lenguajes de Programacion y Procesadores de Lenguaje/: 57GIIN_UC1_GAGLIARDO_MIGUEL_ANGEL.odt
03 - Tercero/60GIIN - Informatica Grafica/: a.out  glad.c
04 - Cuarto/84GIIN - Trabajo de Fin de Grado/: README.md
05GIIN - Fundamentos de Programacion/uc1/: TP01.circ
05GIIN - Fundamentos de Programacion/uc3/: UC3_Semaforo.circ
05GIIN - Fundamentos de Programacion/uc4/: gagliardo_miguel_uc4.asm  uc4.asm
Cursos/Computacion Cuantica/: Gagliardo_Miguel_Angel.docx  miguel_gagliardo.py
(+339 files in other folders)
